name:          beam-transformers-common
version:       0.1
license:       BSD3
copyright:     Copyright (C) Obsidian Systems LLC 2023
author:        Obsidian Systems
maintainer:    maintainer@obsidian.systems
stability:     Experimental
build-type:    Simple
cabal-version: >=1.2
synopsis:      Common abstractions and datastructures.
description:
  This package defines some common abstractions and datatypes used by
  beam-transformers-backend and beam-transformers-frontend.

library
  hs-source-dirs:     src
  build-depends:
      base
    , beam-core
    , lens

  exposed-modules:
    Database.Beam.Transformers.Prefixed.Types

  ghc-options:
    -Wall -fno-warn-unused-do-bind -fwarn-tabs -funbox-strict-fields
    -O2 -fprof-auto-calls
